force-app/main/default/objects/Case/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Review Only</fullName>
            </value>
            <value>
                <fullName>Good to Schedule</fullName>
            </value>
            <value>
                <fullName>Contact Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>