force-app/main/default/objects/Case/fields/AVA_SFCLOUD__EngineeringReqNumber__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__EngineeringReqNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engineering Req Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>