force-app/main/default/objects/Case/fields/Case_Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Elapsed_Time__c</fullName>
    <formula>IF(
    ISBLANK(ClosedDate), 
    &quot;&quot;,  
    IF(
        (ClosedDate - CreatedDate) &lt; (1 / 24),  
        &quot;&lt;1 Hour&quot;,
        IF(
            FLOOR(ClosedDate - CreatedDate) &gt; 0,
            TEXT(FLOOR(ClosedDate - CreatedDate)) &amp; 
            IF(FLOOR(ClosedDate - CreatedDate) = 1, &quot; Day&quot;, &quot; Days&quot;),
            &quot;&quot;
        ) &amp; 
        IF(
            AND(
                FLOOR(MOD((ClosedDate - CreatedDate) * 24, 24)) &gt; 0,
                FLOOR(ClosedDate - CreatedDate) &gt;= 0
            ),
            IF(FLOOR(ClosedDate - CreatedDate) &gt; 0, &quot;, &quot;, &quot;&quot;) &amp;  
            TEXT(FLOOR(MOD((ClosedDate - CreatedDate) * 24, 24))) &amp; 
            IF(FLOOR(MOD((ClosedDate - CreatedDate) * 24, 24)) = 1, &quot; Hour&quot;, &quot; Hours&quot;),
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Elapsed Time</label>
    <type>Text</type>
</CustomField>