force-app/main/default/objects/Case/fields/Case_Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Resolution Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>