force-app/main/default/objects/Case/fields/Case_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Type__c</fullName>
    <label>Case Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Atlas Patient not in SF</fullName>
            </value>
            <value>
                <fullName>Chrono Duplicate</fullName>
            </value>
            <value>
                <fullName>Chrono Not Synced</fullName>
            </value>
            <value>
                <fullName>Incorrect Patient Demographic</fullName>
            </value>
            <value>
                <fullName>Med Rec Not Synced</fullName>
            </value>
            <value>
                <fullName>Missing Patient Demographic</fullName>
            </value>
            <value>
                <fullName>Missing GT Results</fullName>
            </value>
            <value>
                <fullName>Not found in any system</fullName>
            </value>
            <value>
                <fullName>Not Found in EHR (Dr Chrono)</fullName>
            </value>
            <value>
                <fullName>Nothing Wrong</fullName>
            </value>
            <value>
                <fullName>Order to account mismatch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Password Request</fullName>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Migrated to Patient Agreement</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Lab Order Error</fullName>
            </value>
            <value>
                <fullName>Shopify Duplicate Issue</fullName>
            </value>
            <value>
                <fullName>Shopify ID mismatch</fullName>
            </value>
            <value>
                <fullName>Shopify Fraud Risk</fullName>
            </value>
            <value>
                <fullName>Atlas Purchase</fullName>
                <isActive>false</isActive>
                <label>Atlas Purchase</label>
            </value>
            <value>
                <fullName>Missing Gender</fullName>
                <isActive>false</isActive>
                <label>Missing Gender</label>
            </value>
            <value>
                <fullName>Wrong Patient Name</fullName>
                <isActive>false</isActive>
                <label>Wrong Patient Name</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>