force-app/main/default/objects/Case/fields/CE_Created_by__c.field-meta.xml
<CustomField>
    <fullName>CE_Created_by__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Origin, &quot;Webform&quot;),
        ISPICKVAL(Origin, &quot;Email&quot;),
        ISPICKVAL(Origin, &quot;Chat&quot;)
    ),
    &quot;Customer&quot;,
     &quot;Agent&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE Created by</label>
    <type>Text</type>
</CustomField>