force-app/main/default/objects/Case/fields/Collaboration_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Resolution__c</fullName>
    <label>Collaboration Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Wellness Team</fullName>
            </value>
            <value>
                <fullName>Provider Support</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>