force-app/main/default/objects/Case/fields/Customer_Response_Pending__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the latest customer response requires an agent reply.</description>
    <label>Customer Response Pending</label>
    <type>Checkbox</type>
</CustomField>