force-app/main/default/objects/Case/fields/Dispo_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Dispo_Level_1__c</fullName>
    <label>Dispo Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10X Business</fullName>
            </value>
            <value>
                <fullName>10X Health App</fullName>
            </value>
            <value>
                <fullName>Account Data Or Legal</fullName>
            </value>
            <value>
                <fullName>Blood Test</fullName>
            </value>
            <value>
                <fullName>Clinic Services</fullName>
            </value>
            <value>
                <fullName>Echo</fullName>
            </value>
            <value>
                <fullName>Gut Test</fullName>
            </value>
            <value>
                <fullName>Health Net</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Memberships</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Methylation Genetic Test</fullName>
            </value>
            <value>
                <fullName>My Wellness Portal</fullName>
            </value>
            <value>
                <fullName>Other Sales Channels</fullName>
            </value>
            <value>
                <fullName>Precision Genetic Test</fullName>
            </value>
            <value>
                <fullName>SHP</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Superhuman Protocol</fullName>
            </value>
            <value>
                <fullName>Supplements</fullName>
            </value>
            <value>
                <fullName>Test - At Home Blood</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <isActive>false</isActive>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Assistance</fullName>
                <isActive>false</isActive>
                <label>Assistance</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Tech Issue</fullName>
                <isActive>false</isActive>
                <label>Tech Issue</label>
            </value>
            <value>
                <fullName>Test - Blood</fullName>
            </value>
            <value>
                <fullName>Test - Gut Health</fullName>
            </value>
            <value>
                <fullName>Test - Methylation Genetic</fullName>
            </value>
            <value>
                <fullName>Test - Mitochondrial</fullName>
            </value>
            <value>
                <fullName>Test - Precision Genetic</fullName>
            </value>
            <value>
                <fullName>Test - At Home Blood (Dependent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>