force-app/main/default/objects/Case/fields/Dispo_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Dispo_Level_2__c</fullName>
    <label>Dispo Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dispo_Level_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10x Precision Aminos - Tell me about your product</fullName>
            </value>
            <value>
                <fullName>Access to FaceBook Group</fullName>
            </value>
            <value>
                <fullName>Adverse reaction</fullName>
            </value>
            <value>
                <fullName>Affiliate - interested in becoming</fullName>
            </value>
            <value>
                <fullName>Affiliate - issue with follower order</fullName>
            </value>
            <value>
                <fullName>Affiliate - issue with personal order</fullName>
            </value>
            <value>
                <fullName>Affiliate - other</fullName>
            </value>
            <value>
                <fullName>Affiliate - payment questions</fullName>
            </value>
            <value>
                <fullName>Affiliate - technical issues</fullName>
            </value>
            <value>
                <fullName>Amazon - arrived broken/shipping issue</fullName>
            </value>
            <value>
                <fullName>Amazon - Fraudulent Order</fullName>
            </value>
            <value>
                <fullName>Amazon inquiries</fullName>
            </value>
            <value>
                <fullName>Amazon - not happy with product</fullName>
            </value>
            <value>
                <fullName>Amazon - request refund</fullName>
            </value>
            <value>
                <fullName>Amazon - request replacement</fullName>
            </value>
            <value>
                <fullName>Amazon - status of order</fullName>
            </value>
            <value>
                <fullName>Am I able to change my shipping address</fullName>
            </value>
            <value>
                <fullName>Android - code does not work</fullName>
            </value>
            <value>
                <fullName>Android - request code</fullName>
            </value>
            <value>
                <fullName>Apple - code does not work</fullName>
            </value>
            <value>
                <fullName>Apple - request code</fullName>
            </value>
            <value>
                <fullName>Are my MGT results ready</fullName>
            </value>
            <value>
                <fullName>Are my PGT results ready</fullName>
            </value>
            <value>
                <fullName>Are my results ready</fullName>
            </value>
            <value>
                <fullName>Arrived broken/shipping issue</fullName>
            </value>
            <value>
                <fullName>Available open roles</fullName>
            </value>
            <value>
                <fullName>Averse reaction</fullName>
            </value>
            <value>
                <fullName>BenefitHub</fullName>
            </value>
            <value>
                <fullName>Beta Test Questions</fullName>
            </value>
            <value>
                <fullName>Bottle Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>