force-app/main/default/objects/Case/fields/Dispo_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Dispo_Level_3__c</fullName>
    <label>Dispo Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dispo_Level_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>FCR</fullName>
            </value>
            <value>
                <fullName>Send Info</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Diet Recommendations</fullName>
                <isActive>false</isActive>
                <label>Diet Recommendations</label>
            </value>
            <value>
                <fullName>Feedback Submission</fullName>
                <isActive>false</isActive>
                <label>Feedback Submission</label>
            </value>
            <value>
                <fullName>Genetic Counseling</fullName>
                <isActive>false</isActive>
                <label>Genetic Counseling</label>
            </value>
            <value>
                <fullName>Login Issue</fullName>
                <isActive>false</isActive>
                <label>Login Issue</label>
            </value>
            <value>
                <fullName>Membership Benefits</fullName>
                <isActive>false</isActive>
                <label>Membership Benefits</label>
            </value>
            <value>
                <fullName>Prescription Refill Inquiry</fullName>
                <isActive>false</isActive>
                <label>Prescription Refill Inquiry</label>
            </value>
            <value>
                <fullName>Results Follow-up</fullName>
                <isActive>false</isActive>
                <label>Results Follow-up</label>
            </value>
            <value>
                <fullName>Technical Support Needed</fullName>
                <isActive>false</isActive>
                <label>Technical Support Needed</label>
            </value>
            <value>
                <fullName>Test Inquiry</fullName>
                <isActive>false</isActive>
                <label>Test Inquiry</label>
            </value>
            <value>
                <fullName>Usage Instructions</fullName>
                <isActive>false</isActive>
                <label>Usage Instructions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>