force-app/main/default/objects/Case/fields/EHR_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>EHR_Appointment_Id__c</fullName>
    <description>Appointment ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EHR Appointment Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>