force-app/main/default/objects/Case/fields/Escalated_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of agent case has been assigned to after escalation</description>
    <label>Escalated Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>