force-app/main/default/objects/Case/Escalation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Escalation_DateTime__c</fullName>
    <description>Timestamp when a case is escalated (when Dispo_Level_3__c = Escalation)</description>
    <inlineHelpText>Records the exact date and time when the case was escalated to the next tier</inlineHelpText>
    <label>Escalation DateTime</label>
    <type>DateTime</type>
</CustomField>