force-app/main/default/objects/Case/fields/Inquiry_Category__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Category__c</fullName>
    <description>This field is used as a placeholder for the Web Category field, so that the correct label is visible on the Web Form.</description>
    <label>What can we help you with?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Precision Genetic Test</fullName>
            </value>
            <value>
                <fullName>Methylation Genetic Test</fullName>
            </value>
            <value>
                <fullName>Blood Test</fullName>
            </value>
            <value>
                <fullName>Gut Health Test</fullName>
            </value>
            <value>
                <fullName>Supplements</fullName>
            </value>
            <value>
                <fullName>MyWellness Portal</fullName>
            </value>
            <value>
                <fullName>Superhuman Protocol</fullName>
            </value>
            <value>
                <fullName>Legal and Compliance</fullName>
            </value>
            <value>
                <fullName>Brand Partnerships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>