force-app/main/default/objects/Case/fields/Invalid_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Escalation</label>
    <type>Checkbox</type>
</CustomField>