force-app/main/default/objects/Case/fields/Lab_Provider__c.field-meta.xml
<CustomField>
    <fullName>Lab_Provider__c</fullName>
    <label>Lab Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genetic_Test_Lab_Providers</valueSetName>
    </valueSet>
</CustomField>