force-app/main/default/objects/Case/fields/NVMContactWorld__RoutePlanIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RoutePlanIdentifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>