force-app/main/default/objects/Case/fields/Old_SF_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Case_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Old SF Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>