force-app/main/default/objects/Case/fields/Old_SF_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old SF Created Date</label>
    <type>DateTime</type>
</CustomField>