force-app/main/default/objects/Case/fields/Original_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>