force-app/main/default/objects/Case/fields/Patient_CareCloud_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_CareCloud_Id__c</fullName>
    <formula>Account.CareCloud_Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient CareCloud Id</label>
    <type>Text</type>
</CustomField>