force-app/main/default/objects/Case/fields/Primary_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Initial person this case was assigned to</description>
    <inlineHelpText>Case owner at time of case creation.</inlineHelpText>
    <label>Primary Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>