force-app/main/default/objects/Case/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>