force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Training Needed</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Customer Misunderstanding</fullName>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Shipping delay</fullName>
            </value>
            <value>
                <fullName>Customs delay</fullName>
            </value>
            <value>
                <fullName>Carrier - UPS</fullName>
            </value>
            <value>
                <fullName>Carrier - USPS</fullName>
            </value>
            <value>
                <fullName>Carrier - FedEx</fullName>
            </value>
            <value>
                <fullName>Carrier - DHL</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Shipstation</fullName>
            </value>
            <value>
                <fullName>Fulfillment - LaCore</fullName>
            </value>
            <value>
                <fullName>Fulfillment - Shopify</fullName>
            </value>
            <value>
                <fullName>Fulfillment - 3PL</fullName>
            </value>
            <value>
                <fullName>Fulfillment - ASC</fullName>
            </value>
            <value>
                <fullName>System Error - LaCore</fullName>
            </value>
            <value>
                <fullName>System Error - 3PL</fullName>
            </value>
            <value>
                <fullName>System Error - ASC</fullName>
            </value>
            <value>
                <fullName>System Error - Shopify</fullName>
            </value>
            <value>
                <fullName>System Error - Novogenia</fullName>
            </value>
            <value>
                <fullName>System Error - Shipstation</fullName>
            </value>
            <value>
                <fullName>System Error - KBMO</fullName>
            </value>
            <value>
                <fullName>System Error - Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>