force-app/main/default/objects/Case/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1 - Very Upset</fullName>
            </value>
            <value>
                <fullName>2-  Upset</fullName>
            </value>
            <value>
                <fullName>3 - Dissatified</fullName>
            </value>
            <value>
                <fullName>4 - Neutral</fullName>
            </value>
            <value>
                <fullName>5 - Happy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>