force-app/main/default/objects/Case/fields/Supplement_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Inquiry__c</fullName>
    <label>Supplement Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precision Aminos</fullName>
            </value>
            <value>
                <fullName>Precision Nutrition Supplement</fullName>
            </value>
            <value>
                <fullName>Precision Weight Management Supplements 10X 5-MTHF</fullName>
            </value>
            <value>
                <fullName>10X ALPHA</fullName>
            </value>
            <value>
                <fullName>10X Aminos - Tropical Orange</fullName>
            </value>
            <value>
                <fullName>10X Aminos Blend Fruit Punch</fullName>
            </value>
            <value>
                <fullName>10X Berberine</fullName>
            </value>
            <value>
                <fullName>10X Calm Tincture 60ml</fullName>
            </value>
            <value>
                <fullName>10X Children&apos;s Multivitamin Gummies / Strawberry Watermelon</fullName>
            </value>
            <value>
                <fullName>10X Collagen Peptides 30 Serv</fullName>
            </value>
            <value>
                <fullName>10X Colostrum 60 serving tub</fullName>
            </value>
            <value>
                <fullName>10X Curcumin/Turmeric</fullName>
            </value>
            <value>
                <fullName>10X DK CAPSULES 60SERV</fullName>
            </value>
            <value>
                <fullName>10X FOCUS CAPSULES</fullName>
            </value>
            <value>
                <fullName>10X Health Lemon-Lime Hydration</fullName>
            </value>
            <value>
                <fullName>10X Health Wave Crusher Energy</fullName>
            </value>
            <value>
                <fullName>10X Health Wave Crusher Hydration</fullName>
            </value>
            <value>
                <fullName>10X Hydration Electrolytes Lemon Lime</fullName>
            </value>
            <value>
                <fullName>10X Hydration Electrolytes Strawberry Lemonade</fullName>
            </value>
            <value>
                <fullName>10X MAGNESIUM CAPSULES 60SERV</fullName>
            </value>
            <value>
                <fullName>10X Methylene Blue Drops (Superhuman Energy)</fullName>
            </value>
            <value>
                <fullName>10X Methylene Blue Tablets (Superhuman Energy)</fullName>
            </value>
            <value>
                <fullName>10X MIC CHROMIUM CAPSULES 60SERV</fullName>
            </value>
            <value>
                <fullName>10X NEURO MEDULLA</fullName>
            </value>
            <value>
                <fullName>10X OPTIMIZE</fullName>
            </value>
            <value>
                <fullName>10X Plant Protein Chocolate v2 / 30 servings</fullName>
            </value>
            <value>
                <fullName>10X Plant Protein Vanilla v2 / 30 servings</fullName>
            </value>
            <value>
                <fullName>10X PROBIOTICS CAPSULES 60SERV</fullName>
            </value>
            <value>
                <fullName>10X SLEEP CAPSULES 60SERV</fullName>
            </value>
            <value>
                <fullName>10X TMG Capsules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>