force-app/main/default/objects/Case/fields/Survey_Comments__c.field-meta.xml
<CustomField>
    <fullName>Survey_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>