force-app/main/default/objects/Case/fields/Tier_2_Case_Counter__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Case_Counter__c</fullName>
    <label>Tier 2 Case Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>