force-app/main/default/objects/Case/fields/TRIG_AUTO__c.field-meta.xml
<CustomField>
    <fullName>TRIG_AUTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRIG_AUTO</label>
    <type>Checkbox</type>
</CustomField>