force-app/main/default/objects/Case/fields/Web_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Web_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Date of Birth</label>
    <type>Date</type>
</CustomField>