force-app/main/default/objects/Case/fields/Webform_Category__c.field-meta.xml
<CustomField>
    <fullName>Webform_Category__c</fullName>
    <label>Webform Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precision Genetic Test</fullName>
            </value>
            <value>
                <fullName>Methylation Genetic Test</fullName>
            </value>
            <value>
                <fullName>Blood Test</fullName>
            </value>
            <value>
                <fullName>Gut Health Test</fullName>
            </value>
            <value>
                <fullName>Supplements</fullName>
            </value>
            <value>
                <fullName>MyWellness Portal</fullName>
            </value>
            <value>
                <fullName>Hydrogen Water Bottle</fullName>
            </value>
            <value>
                <fullName>Superhuman Protocol</fullName>
            </value>
            <value>
                <fullName>Legal and Compliance</fullName>
            </value>
            <value>
                <fullName>Brand Partnerships</fullName>
            </value>
            <value>
                <fullName>Mitoscreen</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Medications</fullName>
                <isActive>false</isActive>
                <label>Medications</label>
            </value>
            <value>
                <fullName>My Wellness Portal</fullName>
                <isActive>false</isActive>
                <label>My Wellness Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>